<resources>
    <string name="app_name">Vertaktoid</string>
    <string name="status_format">%1$s: %2$s at %3$s.</string>
    <string name="status_date_format">hh:mm:ss</string>
    <string name="dialog_button_negative">Cancel</string>
    <string name="dialog_button_positive">OK</string>
    <string name="dialog_goto_page_label">Page number:</string>
    <string name="dialog_goto_titel">Go To Page</string>
    <string name="dialog_settings_horover_label">Horizontal overlapping:</string>
    <string name="dialog_settings_titel">Settings</string>
    <string name="dialog_iifs_titel">IIIF Viewer</string>
    <string name="dialog_iiif_horover_label">Regions:</string>
    <string name="dialog_settings_undosize_label">Max. size for undo/redo stack:</string>
    <string name="dialog_iiif_region">Region:</string>
    <string name="dialog_iiif_quality_label">Quality:</string>
    <string name="dialog_iiif_size_label">Size:</string>
    <string name="iiif_quality_defualt_label">Defualt:</string>
    <string name="iiif_quality_color_label">Color:</string>
    <string name="iiif_quality_gray_label">Gray:</string>
    <string name="iiif_quality_bitonal_label">Bitonal:</string>
    <string name="dialog_iiif_rotation_label">Rotation:</string>
    <string name="dialog_settings_percents">percents of page width</string>
    <string name="dialog_iiif_square">Square</string>
    <string name="dialog_iiif_points">Points</string>
    <string name="dialog_iiif_percent">Percent</string>
    <string name="dialog_settings_points">points</string>
    <string name="dialog_iiif_full">Full</string>
    <string name="dialog_editmo_titel">Set Movement Anchor</string>
    <string name="dialog_editmo_movement_label">Select existing movement or create new one:</string>
    <string name="dialog_editmo_spinner_optdef">create new</string>
    <string name="dialog_editmo_spinner_optelse">set label only</string>
    <string name="dialog_editmo_label_label">Label for movement:</string>
    <string name="dialog_editmo_label_input_hint">optional</string>
    <string name="dialog_editme_titel">Edit Measure</string>
    <string name="dialog_editme_name_label">Measure name:</string>
    <string name="dialog_editme_rest_label">Rest bars:</string>
    <string name="dialog_settings_mei_label">Type for next annotations:</string>
    <string name="dialog_settings_mei_canonical">orthogonal box</string>
    <string name="dialog_settings_mei_extended">oriented box</string>
    <string name="dialog_settings_mei_polygonal">polygon</string>
    <string name="upbeat">Upbeat</string>
    <string name="radio_upbeat">Radio upbit</string>
    <string name="internet_connection_error">Please connect to the internet</string>
    <string name="access_denied_error">Please allow access your media files to Veraktoid</string>

</resources>
