<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/dialog_settings_horover_input"
        android:text="@string/dialog_iiif_horover_label"
        android:layout_marginStart="10dp"/>
    <EditText
        android:id="@+id/dialog_settings_horover_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"/>
    <RadioGroup
        android:id="@+id/dialog_settings_horover_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/regions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_settings_points" />
        <RadioButton android:id="@+id/dialog_settings_horover_type_percents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_settings_percents" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/dialog_settings_undosize_input"
        android:text="@string/dialog_settings_undosize_label"
        android:layout_marginStart="10dp"/>
    <EditText
        android:id="@+id/dialog_settings_undosize_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/dialog_settings_mei_type"
        android:text="@string/dialog_settings_mei_label"
        android:layout_marginStart="10dp"/>
    <RadioGroup
        android:id="@+id/dialog_settings_mei_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/dialog_settings_annotation_type_orthogonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_settings_mei_canonical" />

        <RadioButton android:id="@+id/dialog_settings_annotation_type_oriented"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_settings_mei_extended" />
        <RadioButton android:id="@+id/dialog_settings_annotation_type_polygon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_settings_mei_polygonal" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Measure Type" />

    <CheckBox
        android:id="@+id/upbeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upbeat" />

    <CheckBox
        android:id="@+id/annot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Annotation" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialog_settings_button_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_button_negative"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialog_settings_button_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_button_positive"/>
    </LinearLayout>

</LinearLayout>